@@ -22,10 +22,15 @@ TMPFILE="/run/shm/tmpfile$$"
 # ------------------------------------------------------------------------------
 grep -vi "# inist-tools" "$DOCKER_DEFAULT_FILE" > "$TMPFILE"
 cp "$TMPFILE" "$DOCKER_DEFAULT_FILE"
+rm "$TMPFILE"
 
 # ------------------------------------------------------------------------------
 # Service
 # ------------------------------------------------------------------------------
+
+# Debian + Ubunu >= 15.04 -> systemd
+# Ubuntu 14.04 -> upstart + fichiers sysvinit
+
 is_debian=$(cat /etc/issue | grep -i "debian")
 is_ubuntu=$(cat /etc/issue | grep -i "ubuntu")
 
@@ -37,14 +42,36 @@ else
   platform="unknown"
 fi
 
+# Suppression de la conf spécifique au proxy INIST
+rm /etc/systemd/system/docker.service.d/http-proxy.conf
+
 if [ $platform == "debian" ]; then
   cp /etc/systemd/system/docker.service.d/http-proxy.conf /etc/systemd/system/docker.service.d/http-proxy.conf_inis-tools-backup
-  grep -vi "# inist-tools" /etc/systemd/system/docker.service.d/http-proxy.conf > "$TMPFILE"
-  cp "$TMPFILE" /etc/systemd/system/docker.service.d/http-proxy.conf
+  # cp "$TMPFILE" /etc/systemd/system/docker.service.d/http-proxy.conf
+  systemctl daemon-reload
+  sleep 1
+  systemctl restart docker
+  sleep 1
+  /etc/init.d/docker restart
 elif [ $platform == "ubuntu" ]; then
-  cp /lib/systemd/system/docker.service /lib/systemd/system/docker.service_inist-tools-backup
-  grep -vi "# inist-tools" /lib/systemd/system/docker.service > "$TMPFILE"
-  cp "$TMPFILE" /lib/systemd/system/docker.service
+  ubuntuVersion=$(cat /etc/lsb-release | grep -i "DISTRIB_RELEASE" | cut -d"=" -f 2)
+  _it_std_consoleMessage "CHECK" "Ubuntu « $ubuntuVersion » détecté"
+  case $ubuntuVersion in
+    "12.04" | "12.10" | "13.04" | "13.10" | "14.04" | "14.10" )
+      _it_std_consoleMessage "CHECK" "Utilisation de « update-rc.d »"
+      sudo update-rc.d docker defaults
+      sleep 1
+      service docker restart
+    ;;
+    * )
+      _it_std_consoleMessage "CHECK" "Utilisation de « systemctl »"
+      systemctl daemon-reload
+      sleep 1
+      systemctl restart docker
+      sleep 1
+      /etc/init.d/docker restart
+    ;;
+  esac
 fi
 
 # ------------------------------------------------------------------------------
