@@ -32,5 +32,6 @@ inist-tools (0.9.11RC) RC; urgency=medium
     docker
   * [DEV] Correction doc + correction proxy on pour APT + ajout messahe
     d'erreur sur commande incorrecte
+  * [DEV] Màj des procédures docker-proxy-on et docker-proxy-off
 
  -- Stanislas PERRIN <stanislas.perrin@inist.fr>  Tue, 21 Jun 2016 08:28:37 +0200
